@@ -32,6 +32,7 @@ $ -> Language fix or change
 $ Consolidated "Alias" value.
 $ Consolidating for RTL support the Filter string/value in back-end
 $ Consolidated "Description" value + some.
+# [#20979] single contact - enable show contact list. Thanks Tim.
 
 14-Jun-2010 Andrew Eddie
  # Fixed issue [#20884] banner manager export not working fatal error (Rob Joyce, Phil Snell).
